--- a/src/zoom1.css
+++ b/src/zoom1.css
@@ -42,6 +42,7 @@
 /* show the dropdown menu on hover */
 .dropdown:hover .dropdown-content{
     display: block;
+    cursor: pointer;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
